Redo animations using different tools

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "@types/node": "^16.11.59",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "aos": "^2.3.4",
+    "animate.css": "^4.1.1",
     "react": "^18.2.0",
+    "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "scroll-to-element": "^2.0.3",
@@ -21,7 +22,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-   "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
